OBJ export: emit a .mtl + texture image(s) so models open textured
The OBJ export wrote geometry only, so models opened grey in Blender. Now, when a
resource carries its own tex layers, ObjExport also produces a Wavefront .mtl
material library and writes the texture image file(s) next to the .obj, with
mtllib + per-submesh usemtl so the model opens textured (UVs were already
exported as vt). Material->texture follows the mesh.matid -> mat2.id -> local tex
chain: a single texture maps to everything; multi-texture models use that chain
best-effort and default to the first texture. Textures linked from OTHER
resources (mat2 mlink, e.g. knarr's tree/cloth textures) are not fetched -- only
this resource's own tex layers are exported, with a note in the .obj.

Both the CLI `obj` command and the GUI "Export OBJ" now write the .obj, .mtl and
texture files together. Verified end-to-end: male.res -> textured single-material
model (valid JPEG extracted); knarr.res -> 6 textures + best-effort per-submesh
assignment; samples still 667/667. Updated ObjExportTest (geometry-only stays
mtl-less; textured export emits mtl+image+usemtl) and a kb note on the
material->texture mapping.

Powered by Claude Opus 4.8

Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>